--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,27 @@
       href="/1stTailwindProject/public/build/tailwind.css"
     />
   </head>
-  <body>
+  <body class="bg-gray-100">
     <!--<h1
       class="text-center m-12 px-4 py-6 w-17 
       bg-gray-900 text-gray-400 font-sans text-2xl"
     > 
       Hello World!
     </h1>-->
+    <div class="pl-16 py-12 w-4/12 ">
+      <img
+        class="h-12"
+        src="/1stTailwindProject/public/img/logo.svg"
+        alt="workcation"
+      />
+      <img
+        class="mt-6 h-18 w-18 rounded-lg shadow-xl"
+        src="/1stTailwindProject/public/img/beach-work.jpg"
+        alt="woman workcationing"
+      />
+      <h1 class="mt-4 text-center text-gray-700 font-semibold ">
+        You can work anywhere. Take advantage of it
+      </h1>
+    </div>
   </body>
 </html>
