text and button styling

--- a/public/index.html
+++ b/public/index.html
@@ -17,20 +17,32 @@
     > 
       Hello World!
     </h1>-->
-    <div class="pl-16 py-12 w-4/12 ">
+    <div class=" ml-64 pl-16  py-12 w-4/12 ">
       <img
         class="h-12"
         src="/1stTailwindProject/public/img/logo.svg"
         alt="workcation"
       />
       <img
-        class="mt-6 h-18 w-18 rounded-lg shadow-xl"
+        class="mt-6 h-18 w-18  rounded-lg shadow-xl"
         src="/1stTailwindProject/public/img/beach-work.jpg"
         alt="woman workcationing"
       />
-      <h1 class="mt-4 text-center text-gray-700 font-semibold ">
-        You can work anywhere. Take advantage of it
+      <h1 class="mt-6 text-3xl text-gray-900 font-bold leading-tight">
+        You can work anywhere.
+        <span class=" text-indigo-500">Take advantage of it</span>
       </h1>
+      <p class="mt-2 text-gray-600 text-base">
+        workcation helps you find work-friendly rentals in beautiful locations
+        so you can enjoy some nice weather even if your not on vacation
+      </p>
+      <div class="mt-4">
+        <a
+          href="#"
+          class=" inline-block bg-indigo-500 py-3  px-5 rounded-lg text-white"
+          >Book your escape</a
+        >
+      </div>
     </div>
   </body>
 </html>
