--- a/public/index.html
+++ b/public/index.html
@@ -10,39 +10,55 @@
       href="/1stTailwindProject/public/build/tailwind.css"
     />
   </head>
-  <body class="bg-gray-100">
+  <body class="bg-gray-100  ">
     <!--<h1
       class="text-center m-12 px-4 py-6 w-17 
       bg-gray-900 text-gray-400 font-sans text-2xl"
     > 
       Hello World!
     </h1>-->
-    <div class=" ml-64 pl-16  py-12 w-4/12 ">
-      <img
-        class="h-12"
-        src="/1stTailwindProject/public/img/logo.svg"
-        alt="workcation"
-      />
-      <img
-        class="mt-6 h-18 w-18  rounded-lg shadow-xl"
-        src="/1stTailwindProject/public/img/beach-work.jpg"
-        alt="woman workcationing"
-      />
-      <h1 class="mt-6 text-3xl text-gray-900 font-bold leading-tight">
-        You can work anywhere.
-        <span class=" text-indigo-500">Take advantage of it</span>
-      </h1>
-      <p class="mt-2 text-gray-600 text-base">
-        workcation helps you find work-friendly rentals in beautiful locations
-        so you can enjoy some nice weather even if your not on vacation
-      </p>
-      <div class="mt-4">
-        <a
-          href="#"
-          class=" inline-block bg-indigo-500 py-3  px-5 rounded-lg text-white"
-          >Book your escape</a
+    <div class="flex">
+      <div class="  px-8  py-12  max-w-md mx-auto sm:max-w-xl lg:w-1/2 ">
+        <img
+          class="h-10"
+          src="/1stTailwindProject/public/img/logo.svg"
+          alt="workcation"
+        />
+        <img
+          class="mt-6  sm:mt-8 sm:h-64 sm:w-full sm:object-cover 
+          sm:object-center rounded-lg shadow-xl lg:hidden"
+          src="/1stTailwindProject/public/img/beach-work.jpg"
+          alt="woman workcationing"
+        />
+        <h1
+          class="mt-6 text-3xl sm:text-4xl sm:mt-8 text-gray-900 font-bold 
+          leading-tight"
         >
+          You can work anywhere. <br />
+          <span class=" text-indigo-500">Take advantage of it</span>
+        </h1>
+        <p class="mt-2 text-gray-600 sm:mt-4 sm:text-xl">
+          workcation helps you find work-friendly rentals in beautiful locations
+          so you can enjoy some nice weather even if your not on vacation
+        </p>
+        <div class="mt-4 sm:mt-6">
+          <a
+            href="#"
+            class=" inline-block bg-indigo-500 py-3  px-5 rounded-lg 
+            shadow-lg text-white uppercase tracking-wider font-semibold text-sm
+            sm:text-base"
+            >Book your escape</a
+          >
+        </div>
+      </div>
+      <div class=" hidden lg:block lg:w-1/2">
+        <img
+          class=""
+          src="/1stTailwindProject/public/img/beach-work.jpg"
+          alt="woman workcationing"
+        />
       </div>
     </div>
+    
   </body>
 </html>
