--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
       href="/1stTailwindProject/public/build/tailwind.css"
     />
   </head>
-  <body class="bg-gray-100  ">
+  <body class="bg-gray-300  ">
     <!--<h1
       class="text-center m-12 px-4 py-6 w-17 
       bg-gray-900 text-gray-400 font-sans text-2xl"
     > 
       Hello World!
     </h1>-->
-    <div class="flex">
-      <div class="  px-8  py-12  max-w-md mx-auto sm:max-w-xl lg:w-1/2 ">
+    <div class="flex bg-gray-100">
+      <div class="  px-8  py-12  max-w-md mx-auto sm:max-w-xl lg:max-w-full lg:w-1/2 ">
         <img
           class="h-10"
           src="/1stTailwindProject/public/img/logo.svg"
@@ -51,9 +51,10 @@
           >
         </div>
       </div>
-      <div class=" hidden lg:block lg:w-1/2">
+      <div class=" hidden lg:block lg:w-1/2 lg:relative">
         <img
-          class=""
+          class=" absolute inset-0 w-full h-full object-cover object-center
+          "
           src="/1stTailwindProject/public/img/beach-work.jpg"
           alt="woman workcationing"
         />
