--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,9 @@
       Hello World!
     </h1>-->
     <div class="flex bg-gray-100">
-      <div class="  px-8  py-12  max-w-md mx-auto sm:max-w-xl lg:max-w-full lg:w-1/2 ">
-        <img
+      <div class="  px-8  py-12  max-w-md mx-auto sm:max-w-xl lg:max-w-full lg:w-1/2 lg:py-24 lg:px-12">
+        <div class=" xl: max-w-lg">
+          <img
           class="h-10"
           src="/1stTailwindProject/public/img/logo.svg"
           alt="workcation"
@@ -31,7 +32,7 @@
           alt="woman workcationing"
         />
         <h1
-          class="mt-6 text-3xl sm:text-4xl sm:mt-8 text-gray-900 font-bold 
+          class="mt-6 text-3xl sm:text-4xl sm:mt-8 lg:text-3xl text-gray-900 font-bold 
           leading-tight"
         >
           You can work anywhere. <br />
@@ -49,6 +50,7 @@
             sm:text-base"
             >Book your escape</a
           >
+        </div>
         </div>
       </div>
       <div class=" hidden lg:block lg:w-1/2 lg:relative">
