--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     </h1>-->
     <div class="flex bg-gray-100">
       <div class="  px-8  py-12  max-w-md mx-auto sm:max-w-xl lg:max-w-full lg:w-1/2 lg:py-24 lg:px-12">
-        <div class=" xl: max-w-lg">
+        <div class=" xl: max-w-lg xl:ml-auto">
           <img
           class="h-10"
           src="/1stTailwindProject/public/img/logo.svg"
@@ -32,7 +32,7 @@
           alt="woman workcationing"
         />
         <h1
-          class="mt-6 text-3xl sm:text-4xl sm:mt-8 lg:text-3xl text-gray-900 font-bold 
+          class="mt-6 text-3xl sm:text-4xl sm:mt-8 lg:text-3xl xl:text-4xl text-gray-900 font-bold 
           leading-tight"
         >
           You can work anywhere. <br />
